# FCD

./: .gitignore  FCD.py  FCD_example.ipynb  MANIFEST.in  README.md  chembl_50k_stats.p  example.ipynb  keras2pytorch.py  pyproject.toml  setup.py
.github/workflows/: test_dev.yml  test_master.yml
.ipynb_checkpoints/: ChEMBL-LSTM-predict-FCD-github-checkpoint.ipynb
FCD.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
fcd/: FCD.py  __init__.py  fcd.py  ref_combined_stat.p  utils.py
fcd_torch/: fcd.py
test/: test_fcd.py  test_fcd_torch.py
tests/: dummyfcd_results.csv  test.py  test_dummyfcd.py  test_results.csv
